0.3.0 beta
=================================

.. note:: This version is backward incompatible

* reset migrations
* fixed dumpdata