@@ -3,8 +3,8 @@ python:
   - "2.7"
 script: nosetests
 env:
-  - DJANGO_VERSION=1.3.1
-  - DJANGO_VERSION=1.4
+  - DJANGO_VERSION=1.4.5
+  - DJANGO_VERSION=1.5.1
 install:
   - pip install -q Django==$DJANGO_VERSION
   - python setup.py -q install
