@@ -1,0 +1,24 @@
+[tox]
+envlist =
+    d14,d15,p3d15
+
+[testenv]
+changedir=tests
+commands =
+    django-admin.py test geo --settings=geo.test_settings
+
+[testenv:d14]
+basepython = python2.7
+deps =
+    django==1.4.5
+
+[testenv:d15]
+basepython = python2.7
+deps =
+    django==1.5.1
+
+[testenv:p3d15]
+basepython = python3.2
+deps =
+    django==1.5.1
+
